fix: consulta dos detalhes do veículo está funcionando corretamente