@@ -10,7 +10,6 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 
 public class Menu {
     private final Scanner scanner = new Scanner(System.in);
@@ -32,7 +31,7 @@ public class Menu {
         int tipoVeiculo = scanner.nextInt();
         scanner.nextLine();
 
-        String endereco = null;
+        String endereco = "";
 
         if (tipoVeiculo == 1) {
             endereco = END_BASE + "carros/marcas";
@@ -45,6 +44,10 @@ public class Menu {
         }
 
         obterListaDeMarcas(endereco);
+
+        System.out.println("Informe o código da marca para consultar os modelos: ");
+        String codMarca = scanner.nextLine();
+        endereco = endereco + "/" + codMarca + "/modelos";
         List<Dados> modelosLista = consultarModelosPorMarca(endereco);
 
         if (modelosLista == null || modelosLista.isEmpty()) {
@@ -52,18 +55,17 @@ public class Menu {
             return;
         }
 
-        List<Dados> veiculosEncontrados = consultarVeiculosPorModelo(modelosLista);
-        if (veiculosEncontrados.isEmpty()) {
-            System.out.println("Nenhum veículo encontrado para o modelo informado.");
-        }
+        consultarVeiculosPorModelo(modelosLista);
 
-        // TODO: atualizar variavel endereco
-        //consultarVeiculosPorModeloAno(endereco);
+        System.out.println("Digite o código do modelo: ");
+        String codModelo = scanner.nextLine();
+        endereco = endereco + "/" + codModelo + "/anos";
+        consultarVeiculosPorModeloAno(endereco);
 
     }
 
     private void obterListaDeMarcas(String endereco) {
-        String json = consumoApi.obterDados(endereco);
+        var json = consumoApi.obterDados(endereco);
         List<Dados> marcas = converteDados.obterLista(json, Dados.class);
 
         marcas.stream()
@@ -72,10 +74,6 @@ public class Menu {
     }
 
     private List<Dados> consultarModelosPorMarca(String endereco) {
-        System.out.println("Informe o código da marca para consultar os modelos: ");
-        String codMarca = scanner.nextLine();
-
-        endereco = endereco + "/" + codMarca + "/modelos";
         var json = consumoApi.obterDados(endereco);
 
         Modelos modelosLista = converteDados.obterDados(json, Modelos.class);
@@ -94,31 +92,26 @@ public class Menu {
         return modelosLista.modelos();
     }
 
-    private List<Dados> consultarVeiculosPorModelo(List<Dados> modelosLista) {
+    private void consultarVeiculosPorModelo(List<Dados> modelosLista) {
         System.out.println("Informe o nome do modelo para consultar os veículos: ");
         var nomeVeiculo = scanner.nextLine();
 
         List<Dados> dadosList = modelosLista.stream()
                 .filter(m -> m.nome().toLowerCase().contains(nomeVeiculo.toLowerCase()))
-                .collect(Collectors.toList());
+                .toList();
 
         dadosList.forEach(System.out::println);
 
-        return dadosList;
     }
 
-
     private void consultarVeiculosPorModeloAno(String endereco) {
-        System.out.println("Digite o código do modelo: ");
-        String codModelo = scanner.nextLine();
-        endereco = endereco + "/" + codModelo + "/anos";
         var json = consumoApi.obterDados(endereco);
 
         List<Dados> anos = converteDados.obterLista(json, Dados.class);
         List<Veiculo> veiculos = new ArrayList<>();
 
-        for(int i = 0; i < anos.size(); i++) {
-            var enderecoAnos = endereco + "/" + anos.get(i).codigo();
+        for (Dados ano : anos) {
+            var enderecoAnos = endereco + "/" + ano.codigo();
             json = consumoApi.obterDados(enderecoAnos);
             Veiculo veiculo = converteDados.obterDados(json, Veiculo.class);
             veiculos.add(veiculo);
